force-app/main/default/objects/NineDocs__EmailTemplate__c/fields/NineDocs__AvailableForUse__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__AvailableForUse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>