force-app/main/default/objects/NineDocs__EmailTemplate__c/fields/NineDocs__Description__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>