force-app/main/default/objects/NineDocs__EmailTemplate__c/fields/NineDocs__EmailBody__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__EmailBody__c</fullName>
    <label>Email Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>