force-app/main/default/objects/NineDocs__EmailTemplate__c/fields/NineDocs__EmailTemplateType__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__EmailTemplateType__c</fullName>
    <inlineHelpText>Choose the type of email template you would like to create.</inlineHelpText>
    <label>Email Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formal Letter</fullName>
            </value>
            <value>
                <fullName>Notification</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>