force-app/main/default/objects/NineDocs__EmailTemplate__c/fields/NineDocs__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__ObjectName__c</fullName>
    <label>Object Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>