force-app/main/default/objects/NineDocs__EmailTemplate__c/fields/NineDocs__Subject__c.field-meta.xml
<CustomField>
    <fullName>NineDocs__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>