force-app/main/default/objects/NineDocs__EmailTemplate__c/listViews/NineDocs__All.listView-meta.xml
<ListView>
    <fullName>NineDocs__All</fullName>
    <columns>NAME</columns>
    <columns>NineDocs__EmailBody__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>NineDocs__Subject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>